Closed Bug 370347 Opened 18 years ago Closed 18 years ago

Fix warning in security pref pane

Categories

(Camino Graveyard :: Preferences, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.3)

Attachments

(2 files)

Attached patch fixSplinter Review
When the low-grade encryption stuff was taken out in bug 324306, remnants were left of the removed method, including a header entry for a non-existent method. This removes the cruft and cleans up some style.
Attachment #255049 - Flags: superreview?(joshmoz)
Attached file corresponding nib
Removes the dead outlet.
Attachment #255049 - Flags: superreview?(joshmoz) → superreview+
Checked in on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.3
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: