Camino only - Bug 370347: Remove dead code from security pref pane. r/sr=josh